--- a/REQUIREMENTS.txt
+++ b/REQUIREMENTS.txt
@@ -8,6 +8,7 @@ idna==2.6
 imagesize==0.7.1
 Jinja2==2.10
 MarkupSafe==1.0
+matplotlib==2.2.0
 Pygments==2.2.0
 pytz==2017.3
 requests==2.18.4
@@ -16,5 +17,6 @@ snowballstemmer==1.2.1
 Sphinx==1.6.5
 sphinx-intl==0.9.9
 sphinxcontrib-websupport==1.0.1
+sphinx-gallery==0.1.13
 transifex-client==0.12.5
 urllib3==1.22
